--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,11 +2,6 @@ footer {
     height: 200px;
     width: 100%;
     background-color: #444444;
-}
-
-.social {
-    height: 50%;
-    width: 100%;
     position: relative;
     text-align: center;
     padding-top: 50px;
@@ -22,7 +17,44 @@ footer {
     width: 60x;
 }
 
-.social p {
-    color: white;
+.footer p {
+    color: white !important;
     margin-top: 15px;
+    font-size: 1.4vw !important;
 }
+
+/* #region Responsive Design */
+
+/* #region Small screens, laptops */
+
+@media screen and (max-width: 1024px) {
+
+    .preface h2 { width: 80%; }
+    .footer p { font-size: 2vw !important; }
+
+}
+
+/* #endregion Small screens, laptops */
+
+/* #region iPads, Tablets */
+
+@media screen and (max-width: 768px) {
+
+}
+
+/* #endregion iPads, Tablets */
+
+/* #region Mobile devices */
+
+@media screen and (max-width: 480px) {
+ 
+    .footer { height: 120px; padding-top: 25px; }
+    .social-item { padding: 0 15px; }
+    .social-item a img { height: 45px; width: 45px; }
+    .footer p { margin-top: 15px; font-size: 2.5vw !important;}
+
+}
+
+/* #endregion Mobile devices */
+
+/* #endregion Responsive Design */
