--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -119,6 +119,11 @@ nav {
     
     .logoPoli { width: 80%; }
     .logoClub { width: 80%; }
+    .menu-list {display:  none; }
+    .hamburger { display: block; }
+    .hamburger.active .bar:nth-child(2) { opacity: 0; }
+    .hamburger.active .bar:nth-child(1) { transform: translateY(8px) rotate(45deg); }
+    .hamburger.active .bar:nth-child(3) { transform: translateY(-8px) rotate(-45deg); }
 
 }
 
