--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,7 +1,7 @@
 footer {
     height: 200px;
     width: 100%;
-    background-color: #444444;
+    background-color: #002B49;
     position: relative;
     text-align: center;
     padding-top: 50px;
